<resources>
    <string name="app_name">Student Toolkit</string>

    <string-array name="menu">
        <item>centimeter</item>
        <item>feet</item>
        <item>inch</item>
        <item>kilometer</item>
        <item>meter</item>
        <item>mile</item>
        <item>millimeter</item>
        <item>yard</item>
    </string-array>

    //calculator strings
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="subtract">-</string>
    <string name="addition">+</string>
    <string name="del">DEL</string>
    <string name="_3">3</string>
    <string name="multiply">*</string>
    <string name="_2">2</string>
    <string name="c">C</string>
    <string name="_1">1</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_5">5</string>
    <string name="divide">/</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>


    //notes strings
    <string name="title_activity_notes">Notes</string>
    <string name="action_settings">Settings</string>
    <string name="activity_title_home">Notes</string>
    <string name="msg_no_notes">No Data Found!</string>
    <string name="lbl_new_note_title">New Note</string>
    <string name="lbl_edit_note_title">Edit Note</string>
    <string name="hint_enter_note">Enter Note Here!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
