<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calculator"
    android:gravity="center"
    android:background="#ffffff"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvCal1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="15dp"
        android:textColor="#000000"
        android:gravity="center_vertical|end"
        android:textSize="35sp" />

    <View
        android:layout_width="411dp"
        android:layout_height="1dp"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/del"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:fadingEdge="horizontal|vertical"
            android:text="@string/del"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/clr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:fadingEdge="horizontal|vertical"
            android:text="@string/c"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/n7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:fadingEdge="horizontal|vertical"
            android:text="@string/_7"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/n8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:fadingEdge="horizontal|vertical"
            android:text="@string/_8"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/n9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:fadingEdge="horizontal|vertical"
            android:text="@string/_9"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/div"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:fadingEdge="horizontal|vertical"
            android:text="@string/divide"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="normal" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/n4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:fadingEdge="horizontal|vertical"
            android:text="@string/_4"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/n5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:fadingEdge="horizontal|vertical"
            android:text="@string/_5"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/n6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:fadingEdge="horizontal|vertical"
            android:text="@string/_6"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/mul"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:fadingEdge="horizontal|vertical"
            android:text="@string/multiply"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="normal" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/n1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:fadingEdge="horizontal|vertical"
            android:text="@string/_1"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/n2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:fadingEdge="horizontal|vertical"
            android:text="@string/_2"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/n3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:fadingEdge="horizontal|vertical"
            android:text="@string/_3"
            android:textSize="30sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/sub"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:fadingEdge="horizontal|vertical"
            android:text="@string/subtract"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/decdot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:fadingEdge="horizontal|vertical"
            android:text="@string/dot"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/n0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:fadingEdge="horizontal|vertical"
            android:text="@string/_0"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/equals"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:fadingEdge="horizontal|vertical"
            android:text="@string/equals"
            android:textSize="30sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/adt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:fadingEdge="horizontal|vertical"
            android:text="@string/addition"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="normal" />

    </LinearLayout>


</LinearLayout>